--- a/cuenta/src/main/resources/application.yml
+++ b/cuenta/src/main/resources/application.yml
@@ -7,6 +7,16 @@ spring:
     username: admin
     password: admin123
 
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/rabbit_db
+    username: root
+    password: 2005
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
 queue:
   name: CUENTA.QUEUE
   exchange: BANCO.EXCHANGE
