--- a/cuenta/src/main/resources/application.yml
+++ b/cuenta/src/main/resources/application.yml
@@ -26,7 +26,7 @@ queue:
 
 queue-notification:
   name: NOTIFICACION.QUEUE
-  exchange: BANCO.EXCHANGE
+#  exchange: BANCO.EXCHANGE
   routing-key: notification-key
 
 
